<resources>
    <string name="app_name">Coaching App Coach</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_app_coach_start">Describe your app</string>
    <string name="welke_sporten_ondersteunt_de_app">Welke sporten ondersteunt de app?</string>
    <string name="crosstrainer">Crosstrainer</string>
    <string name="fietsen">Biking</string>
    <string name="hardlopen">Running</string>
    <string name="fitness">Fitness</string>
    <string name="music">Music</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="strengthtraining">Strengthtraining</string>
    <string name="losse_gewichten">Free weights</string>
    <string name="specifieke_spiergroepen">Specific muscle group</string>
    <string name="title_activity_app_coach_question">Describe your app</string>
    <string name="title_activity_app_coach_result">Results</string>
    <string name="title_activity_app_coach_save">Save your application</string>
    <string name="cardio_logging">Cardio logging</string>
    <string name="power_training_logging">Power training logging</string>
    <string name="support_for_wearables">Support for wearables</string>
    <string name="motivation">Motivation</string>
    <string name="support_for_muziek">Support for muziek</string>
    <string name="share_on_social_media">Share on social media</string>
    <string name="support_your_friends">Support your friends</string>
    <string name="compare_results_with_friends">Compare results with friends</string>
    <string name="result_advice">Other apps in your category often use social support in their apps. Implementing this functionality could help to keep people motivated.</string>
    <string name="save_your_application">Save your application</string>
    <string name="name">Name:</string>
    <string name="description2">Description:</string>
    <string name="play_store_url">Play store URL:</string>
    <string name="application">Application</string>
    <string name="save_name">Name:</string>
    <string name="website_url">Website URL:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="developer">Developer</string>
    <string name="advice">Advice</string>
    <string name="location_tracking">Location tracking</string>
    <string name="sport_functionality">Sport functionality</string>
    <string name="results">Results</string>
    <string name="title_activity_app_finder_start">Important categories</string>
    <string name="gebruikenApp">For which sports do you want to use the application?</string>
    <string name="title_activity_sport__app__coach">Coaching app coach</string>
    <string name="zoekApp">I am searching an app</string>
    <string name="maakApp">I am making an app</string>
    <string name="title_activity_app_finder_question">Find the ideal app!</string>
    <string name="titleAFQ">Should the application keep track of the traveled route?</string>
    <string name="ondertitleAFQ">Is the user able to see the route he/she has walked/biked on a certain day in the application or on a website?</string>
    <string name="answer1AFQ">Yes, both in the application and on a website</string>
    <string name="answer2AFQ">Yes, in the application</string>
    <string name="answer3AFQ">Yes, on a website</string>
    <string name="answer4AFQ">Not important</string>
    <string name="functionalAFQ">How important is this functionality?</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="important">Important</string>
    <string name="optional">Optional</string>
    <string name="notImportant">Not important</string>
    <string name="title_activity_app_finder_product">AppFinderProduct</string>
    <string name="rating">Rating:</string>
    <string name="score_4_6">Score:4.6</string>
    <string name="description">Description:</string>
    <string name="title_activity_app_finder_question2">Find the ideal app!</string>
    <string name="title_activity_app_finder_result">Results</string>
    <string name="titleAFQ2">Should the application keep track of the burned calories?</string>
    <string name="ondertitleAFQ2">Is the user able to see the amount of burned calories on a certain day in the application or on a website?</string>
    <string name="no">No</string>
    <string name="which_sports_does_the_app_support">Which sports does the app support?</string>
    <string name="power_training">Power Training</string>
    <string name="title_activity_app_coach_start_cardio">Selecteer sporten</string>
    <string name="start_question">Are you searching or making a sporting coach app?</string>
    <string name="swimming">Swimming</string>
    <string name="climbing">Climbing</string>
    <string name="rowing">Rowing</string>
    <string name="title_activity_app_coach_start_power">Selecteer sporten</string>
    <string name="app_coach_start_title">Which sports does the app support?</string>
    <string name="weightlifting">Weightlifting</string>
    <string name="title_activity_app_coach_start_music">Selecteer sporten</string>
    <string name="zumba">Zumba</string>
    <string name="aerobics">Aerobics</string>
    <string name="aquarobics">Aquarobics</string>
    <string name="title_activity_app_coach_start_misc">Selecteer sporten</string>
    <string name="title_activity_app_finder_cardio">Selecteer sporten</string>
    <string name="title_activity_app_finder_power">Selecteer sporten</string>
    <string name="title_activity_app_finder_music">Selecteer sporten</string>
    <string name="title_activity_app_finder_misc">Selecteer sporten</string>
</resources>
