<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cac.fhict.org.coachingappcoach.AppFinderQuestion"
    tools:showIn="@layout/activity_app_finder_question">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleAFQ"
        android:id="@+id/tvwQuestion"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ondertitleAFQ"
        android:id="@+id/tvwQuestionDescription"
        android:layout_below="@+id/tvwQuestion"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:textIsSelectable="false" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="@dimen/nav_button_height"
        android:text="@string/answer1AFQ"
        android:id="@+id/btnAnswer1"
        android:layout_below="@+id/tvwQuestionDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center|start"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="@dimen/nav_button_height"
        android:text="@string/answer2AFQ"
        android:id="@+id/btnAnswer2"
        android:layout_below="@+id/btnAnswer1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:gravity="center|start"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="@dimen/nav_button_height"
        android:text="@string/answer3AFQ"
        android:id="@+id/btnQuestion3"
        android:layout_below="@+id/btnAnswer2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:gravity="center|start"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="@dimen/nav_button_height"
        android:text="@string/answer4AFQ"
        android:id="@+id/btnQuestion4"
        android:layout_below="@+id/btnQuestion3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:gravity="center|start"
        android:textAllCaps="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/nav_button_height"
        android:text="@string/back"
        android:id="@+id/btnBack"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="false"
        android:width="100dp"
        android:textAllCaps="false"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/functionalAFQ"
        android:id="@+id/textView2"
        android:textSize="12sp"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/btnQuestion4"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/nav_button_height"
        android:text="@string/next"
        android:id="@+id/button3"
        android:layout_alignBottom="@+id/btnBack"
        android:layout_alignParentEnd="true"
        android:width="100dp"
        android:textAllCaps="false"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/important"
        android:id="@+id/radioButton"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignEnd="@+id/btnBack" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/optional"
        android:id="@+id/radioButton2"
        android:layout_alignTop="@+id/radioButton"
        android:layout_centerHorizontal="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notImportant"
        android:id="@+id/radioButton3"
        android:layout_alignTop="@+id/radioButton2"
        android:layout_alignEnd="@+id/button3" />

</RelativeLayout>
