<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:paddingTop="40dp">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cac.fhict.org.coachingappcoach.AppFinderQuestion2"
    tools:showIn="@layout/activity_app_finder_question2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleAFQ2"
        android:id="@+id/tvwQuestion"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ondertitleAFQ2"
        android:id="@+id/tvwQuestionDescription"
        android:layout_below="@+id/tvwQuestion"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:textIsSelectable="false" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="@dimen/nav_button_height"
        android:text="@string/answer1AFQ"
        android:id="@+id/btnAnswer1"
        android:layout_below="@+id/tvwQuestionDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center|start"
        android:textAllCaps="false"
        android:background="@drawable/grey_button"
        android:paddingLeft="10dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="@dimen/nav_button_height"
        android:text="@string/answer2AFQ"
        android:id="@+id/btnAnswer2"
        android:layout_below="@+id/btnAnswer1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:gravity="center|start"
        android:textAllCaps="false"
        android:background="@drawable/grey_button"
        android:paddingLeft="10dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="@dimen/nav_button_height"
        android:text="@string/answer3AFQ"
        android:id="@+id/btnAnswer3"
        android:layout_below="@+id/btnAnswer2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:gravity="center|start"
        android:textAllCaps="false"
        android:background="@drawable/grey_button"
        android:paddingLeft="10dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="@dimen/nav_button_height"
        android:text="@string/answer4AFQ"
        android:id="@+id/btnAnswer4"
        android:layout_below="@+id/btnAnswer3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:gravity="center|start"
        android:textAllCaps="false"
        android:background="@drawable/grey_button"
        android:paddingLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/functionalAFQ"
        android:id="@+id/textView2"
        android:textSize="12sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/btnAnswer4"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:id="@+id/rgpImportance2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView2"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/important"
            android:id="@+id/radioButton" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/optional"
            android:id="@+id/radioButton2" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notImportant"
            android:id="@+id/radioButton3" />

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/nav_button_height"
        android:text="@string/back"
        android:id="@+id/btnQuestion2Back"
        android:width="100dp"
        android:textAllCaps="false"
        android:layout_below="@id/rgpImportance2"
        android:background="@drawable/grey_button" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/nav_button_height"
        android:text="@string/next"
        android:id="@+id/btnAFNextQ2"
        android:width="100dp"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/btnAnswer4"
        android:background="@drawable/orange_button"
        android:textColor="#ffffff" />

</RelativeLayout>
</ScrollView>