<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="cac.fhict.org.coachingappcoach.AppCoachSave"
        tools:showIn="@layout/activity_app_coach_save">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/save_your_application"
            android:id="@+id/textView14"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="55dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:hint="@string/name"
            android:layout_below="@+id/textView16"
            android:layout_alignParentStart="true"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editText2"
            android:layout_alignParentStart="true"
            android:hint="@string/description"
            android:layout_below="@+id/editText"
            android:minLines="3"
            android:gravity="top" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText3"
            android:layout_below="@+id/editText2"
            android:layout_alignParentStart="true"
            android:hint="@string/play_store_url"
            android:maxLines="1"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/application"
            android:id="@+id/textView16"
            android:layout_below="@+id/textView14"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/developer"
            android:id="@+id/textView17"
            android:layout_below="@+id/editText3"
            android:layout_alignParentStart="true"
            android:textStyle="bold"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText4"
            android:layout_below="@+id/textView17"
            android:layout_alignParentStart="true"
            android:hint="@string/save_name"
            android:maxLines="1"
            android:singleLine="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText5"
            android:layout_below="@+id/editText4"
            android:layout_alignParentStart="true"
            android:hint="@string/website_url"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/btnFindApp"
            android:layout_below="@+id/editText5"
            android:layout_alignParentStart="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/btnSaveSave"
            android:layout_alignBottom="@+id/btnFindApp"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
</ScrollView>
