<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cac.fhict.org.coachingappcoach.AppCoachStartMusic"
    tools:showIn="@layout/activity_app_coach_start_music">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_coach_start_title"
        android:id="@+id/textView12"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/music"
        android:id="@+id/textView20"
        android:layout_below="@+id/textView12"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zumba"
        android:id="@+id/checkBox12"
        android:layout_below="@+id/textView20"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aerobics"
        android:id="@+id/checkBox13"
        android:layout_below="@+id/checkBox12"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aquarobics"
        android:id="@+id/checkBox14"
        android:layout_below="@+id/checkBox13"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_marginTop="10dp" />

    <Button
        android:text="@string/next"
        android:id="@+id/btnMusicNext"
        style="@style/full_width_nav_button"
        android:background="@drawable/orange_button" />
</RelativeLayout>
