<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cac.fhict.org.coachingappcoach.AppCoachStartPower"
    tools:showIn="@layout/activity_app_coach_start_power">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_coach_start_title"
        android:id="@+id/textView18"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/power_training"
        android:id="@+id/textView19"
        android:layout_below="@+id/textView18"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fitness"
        android:id="@+id/checkBox8"
        android:layout_below="@+id/textView19"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/losse_gewichten"
        android:id="@+id/checkBox9"
        android:layout_below="@+id/checkBox8"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specifieke_spiergroepen"
        android:id="@+id/checkBox10"
        android:layout_below="@+id/checkBox9"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weightlifting"
        android:id="@+id/checkBox11"
        android:layout_below="@+id/checkBox10"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="@dimen/nav_button_height"
        android:text="@string/next"
        android:id="@+id/btnPowerNext"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        style="@style/full_width_nav_button"
        android:background="@drawable/orange_button" />
</RelativeLayout>
