<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cac.fhict.org.coachingappcoach.AppCoachQuestion"
    tools:showIn="@layout/activity_app_coach_question">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titleAFQ"
        android:id="@+id/tvwQuestion"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ondertitleAFQ"
        android:id="@+id/tvwQuestionDescription"
        android:layout_below="@+id/tvwQuestion"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="@dimen/nav_button_height"
        android:text="@string/answer1AFQ"
        android:id="@+id/btnAnswer1"
        android:layout_below="@+id/tvwQuestionDescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/orange_button"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="@dimen/nav_button_height"
        android:text="@string/answer2AFQ"
        android:id="@+id/btnAnswer2"
        android:layout_below="@+id/btnAnswer1"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/orange_button"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="@dimen/nav_button_height"
        android:text="@string/answer3AFQ"
        android:id="@+id/btnAnswer3"
        android:layout_below="@+id/btnAnswer2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/orange_button"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="@dimen/nav_button_height"
        android:text="@string/no"
        android:id="@+id/btnAnswer4"
        android:layout_below="@+id/btnAnswer3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/orange_button"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="@dimen/nav_button_height"
        android:text="@string/back"
        android:id="@+id/btnQuestion2Back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/grey_button"
        android:layout_marginBottom="10dp" />
</RelativeLayout>
