<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cac.fhict.org.coachingappcoach.AppFinderCardio"
    tools:showIn="@layout/activity_app_finder_cardio">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_coach_start_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/tvwCardioDescription" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hardlopen"
        android:id="@+id/checkBox2"
        android:layout_below="@+id/textView15"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fietsen"
        android:id="@+id/checkBox3"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_below="@+id/checkBox2"
        android:layout_alignParentLeft="false"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crosstrainer"
        android:id="@+id/checkBox4"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_below="@+id/checkBox3"
        android:layout_alignParentLeft="false"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swimming"
        android:id="@+id/checkBox5"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_below="@+id/checkBox4"
        android:layout_alignParentLeft="false"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/climbing"
        android:id="@+id/checkBox6"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_below="@+id/checkBox5"
        android:layout_alignParentLeft="false"
        android:layout_marginTop="10dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rowing"
        android:id="@+id/checkBox7"
        android:layout_alignParentStart="true"
        android:checked="false"
        android:layout_below="@+id/checkBox6"
        android:layout_alignParentLeft="false"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="@dimen/nav_button_height"
        android:text="@string/next"
        android:id="@+id/btnFinderCardioNext"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        style="@style/full_width_nav_button"
        android:background="@drawable/orange_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Cardiofitness"
        android:id="@+id/textView15"
        android:layout_below="@+id/tvwCardioDescription"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />
</RelativeLayout>
